--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /recursos
+images/JS0/galeria/desktop.ini
+images/JS0/galeria/eternals/desktop.ini
+images/JS0/galeria/hawkeye/desktop.ini
+images/JS0/galeria/spiderman/desktop.ini
+images/JS0/posters/desktop.ini
